<resources>
    <string name="app_name">Это Работа ?</string>

    <string name="nav_header_title">Это Работа ?</string>

    <string name="nav_header_subtitle">stels1040533@gmail.com</string>

    <string name="nav_header_desc">Заголовок</string>
    <string name="action_settings">Настройки</string>

    <string name="menu_task">Найти задание</string>

    <string name="prompt_login">Логин</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>

    <string name="action_sign_in">Регистрация</string>
    <string name="action_sign_in_short">Войти</string>

    <string name="welcome">Добро пожаловать!</string>

    <string name="invalid_username">Не верное имя пользователя</string>
    <string name="invalid_password">Пароль должен быть 5 символов и более</string>

    <string name="login_failed">Ошибка входа</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_create_task">Создать задание</string>
    <string name="login_enter">Вход</string>
    <string name="task_detaols">Информация о заказе</string>
    <string name="nav_user">Профиль пользователя</string>
    <string name="nav_responds_view">Ответы</string>
    <string name="nav_add_respond">Добавить ответ</string>
    <string name="nav_add_review">Создание отзыва</string>
    <string name="nav_my_responds">Мои ответы</string>

</resources>