<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.daniilvdovin.iswork.ui.home.HomeFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/createTaskFragment"
        android:name="com.daniilvdovin.iswork.ui.task.createtask.CreateTaskFragment"
        android:label="@string/nav_create_task"
        tools:layout="@layout/fragment_create_task" />
    <fragment
        android:id="@+id/taskDetails"
        android:name="com.daniilvdovin.iswork.ui.task.TaskDetails"
        android:label="@string/task_detaols"
        tools:layout="@layout/fragment_task_details" />
    <fragment
        android:id="@+id/userFragment"
        android:name="com.daniilvdovin.iswork.ui.user.UserFragment"
        android:label="@string/nav_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/addReviewFragment"
        android:name="com.daniilvdovin.iswork.ui.user.AddReviewFragment"
        android:label="@string/nav_add_review"
        tools:layout="@layout/fragment_add_review" />
    <fragment
        android:id="@+id/respondsViewFragment"
        android:name="com.daniilvdovin.iswork.ui.task.responds.RespondsViewFragment"
        android:label="@string/nav_responds_view"
        tools:layout="@layout/fragment_responds_view" />
    <fragment
        android:id="@+id/addRespondFragment"
        android:name="com.daniilvdovin.iswork.ui.task.responds.AddRespondFragment"
        android:label="@string/nav_add_respond"
        tools:layout="@layout/fragment_add_respond" />
    <fragment
        android:id="@+id/myResponseFragment"
        android:name="com.daniilvdovin.iswork.MyResponseFragment"
        android:label="@string/nav_my_responds"
        tools:layout="@layout/fragment_my_response" />

</navigation>